--- a/ApiFaceAi/ApiFaceAi/appsettings.json
+++ b/ApiFaceAi/ApiFaceAi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SkillCampFaceAIDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
