--- a/ApiFaceAi/ApiFaceAi/appsettings.json
+++ b/ApiFaceAi/ApiFaceAi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SkillCampFaceAIDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SkillCampFaceAIDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
